# python-project-50

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my_workflow.yml
gendiff/: argparse.py  diff_dict.py  gendiff.py  module.py  parsing.py
gendiff/files/nested/: file1.yml  file2.yml
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: fixture_gendiff.py  tester_flat.txt  tester_json.json  tester_nested.txt  tester_plain.txt
tests/fixtures/nested/: file1.json  file1.yml
