[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Make diff for two files (json, yaml)"
authors = ["Sergei Ezerskii <gaftezer@gmail.com>"]
readme = "README.md"
packages = [{include = "gendiff"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Programming Language :: Python :: 3"
]
repository = "https://github.com/EzerTigger/python-project-50"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^5.0.4"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
